# ChessGame

./: CMakeLists.txt
ChessGame/: CMakeLists.txt  Engine.cpp  Engine.h  GUI.cpp  GUI.h  GameBoard.cpp  GameBoard.h  Macros.h  Piece.cpp  Piece.h  Player.cpp  Player.h  main.cpp
required folders/: readme.txt
